# coal

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  hpp-fclConfig.cmake  package.xml  pixi.toml
.github/workflows/: macos-linux-pip.yml  macos-linux-windows-pixi.yml  nix.yml  ros_ci.yml  update_pixi_lockfile.yml
development/scripts/pixi/: activation.bat  activation.sh
include/coal/: collision_data.h  collision_object.h  data_types.h  fwd.hh  hfield.h  octree.h
include/coal/BV/: AABB.h  BV.h  OBB.h  OBBRSS.h  RSS.h  kDOP.h  kIOS.h
include/coal/BVH/: BVH_model.h  BVH_utility.h
include/coal/broadphase/: broadphase_collision_manager.h  broadphase_dynamic_AABB_tree-inl.h  broadphase_dynamic_AABB_tree_array-inl.h
include/coal/broadphase/detail/: morton-inl.h
include/coal/contact_patch/: contact_patch_solver.h  contact_patch_solver.hxx
include/coal/internal/: BV_splitter.h  intersect.h  intersect.hxx  shape_shape_func.h  tools.h  traversal_node_bvh_shape.h  traversal_node_bvhs.h  traversal_node_hfield_shape.h  traversal_node_octree.h
include/coal/math/: transform.h
include/coal/narrowphase/: gjk.h  minkowski_difference.h  narrowphase.h  narrowphase_defaults.h  support_functions.h  support_functions.hxx
include/coal/serialization/: collision_object.h  convex.h  octree.h
include/coal/shape/: convex.h  convex.hxx  geometric_shape_to_BVH_model.h  geometric_shapes.h  geometric_shapes.hxx
include/coal/shape/details/: convex.hxx
include/hpp/fcl/: coal.hpp
python/: CMakeLists.txt  collision-geometries.cc  math.cc
python-nb/: CMakeLists.txt  aabb.cc  bvh.cc  coal.cc  collision-geometries.cc  collision.cc  contact_patch.cc  distance.cc  fwd.h  gjk.cc  height_field.cc  math.cc  memory-footprint.cc  module.cc  octree.cc  pickle.hh  serializable.hh  shapes.cc
python-nb/broadphase/: broadphase.cc  broadphase_callbacks_collision_manager.hh
python-nb/coal/: __init__.py
python-nb/coal/v2/: __init__.py
python/broadphase/: broadphase.cc  broadphase_callbacks.hh
src/: CMakeLists.txt  collision.cpp  collision_func_matrix.cpp  distance.cpp  distance_func_matrix.cpp  intersect.cpp  octree.cpp
src/BV/: AABB.cpp  OBB.cpp  RSS.cpp
src/BVH/: BVH_model.cpp  BVH_utility.cpp  BV_fitter.cpp  BV_splitter.cpp
src/broadphase/: broadphase_SSaP.cpp  broadphase_SaP.cpp  broadphase_bruteforce.cpp  broadphase_collision_manager.cpp  broadphase_dynamic_AABB_tree.cpp  broadphase_dynamic_AABB_tree_array.cpp
src/contact_patch/: contact_patch_solver.cpp
src/distance/: box_halfspace.cpp  box_plane.cpp  box_sphere.cpp  capsule_capsule.cpp  capsule_halfspace.cpp  capsule_plane.cpp  cone_halfspace.cpp  cone_plane.cpp  convex_halfspace.cpp  convex_plane.cpp  cylinder_halfspace.cpp  cylinder_plane.cpp  ellipsoid_halfspace.cpp  ellipsoid_plane.cpp  halfspace_halfspace.cpp  halfspace_plane.cpp  plane_plane.cpp  sphere_capsule.cpp  sphere_cylinder.cpp  sphere_halfspace.cpp  sphere_plane.cpp  sphere_sphere.cpp  triangle_halfspace.cpp  triangle_plane.cpp  triangle_sphere.cpp  triangle_triangle.cpp
src/narrowphase/: gjk.cpp  minkowski_difference.cpp  support_functions.cpp
src/serialization/: serialization.cpp
src/shape/: convex.cpp  geometric_shapes.cpp  geometric_shapes_utility.cpp
src/traversal/: traversal_recurse.cpp
test/: CMakeLists.txt  accelerated_gjk.cpp  benchmark.cpp  box_box_collision.cpp  box_box_distance.cpp  broadphase.cpp  broadphase_collision_1.cpp  broadphase_collision_2.cpp  broadphase_dynamic_AABB_tree.cpp  bvh_models.cpp  capsule_box_1.cpp  capsule_box_2.cpp  capsule_capsule.cpp  collision.cpp  collision_node_asserts.cpp  contact_patch.cpp  convex.cpp  distance.cpp  distance_lower_bound.cpp  frontlist.cpp  geometric_shapes.cpp  gjk.cpp  gjk_asserts.cpp  gjk_convergence_criterion.cpp  hfields.cpp  math.cpp  normal_and_nearest_points.cpp  obb.cpp  octree.cpp  profiling.cpp  security_margin.cpp  serialization.cpp  shape_inflation.cpp  simple.cpp  swept_sphere_radius.cpp  utility.cpp  utility.h
test/python_unit/: CMakeLists.txt  collision_manager.py  pickling.py
